# rust_contact_list

./: Cargo.toml  README.md
samples/: example.json  example_output.json
src/: contact_list_app.rs  main.rs
src/contact_list/: mod.rs
src/controllers/: mod.rs
